# WindowClickText2rd

./: CMakeLists.txt  button_wc.cpp  button_wc.h  draw_wc.cpp  draw_wc.h  evalElem_wc.h  main.cpp  painter_wc.cpp  painter_wc.h  paper_wc.cpp  paper_wc.h  picElem_wc.cpp  picElem_wc.h  tool_wc.cpp  tool_wc.h
